--- a/changelog.html
+++ b/changelog.html
@@ -144,11 +144,17 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
-<h2 id="in-progress-0100---2022-11-xx"><a class="header" href="#in-progress-0100---2022-11-xx">In progress [0.10.0] - 2022-11-XX</a></h2>
+<h2 id="0100---2022-11-03"><a class="header" href="#0100---2022-11-03">[0.10.0] - 2022-11-03</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
-<li>Added the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_freeze_panes"><code>worksheet.set_freeze_panes()</code></a> method to set &quot;freeze&quot; panes for
-worksheets. See also the <a href="https://rustxlsxwriter.github.io/examples/panes.html">app_panes</a> example application.</li>
+<li>
+<p>Added a simulated <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_autofit"><code>worksheet.set_autofit()</code></a> method to automatically adjust
+the width of columns with data. See also the <a href="https://rustxlsxwriter.github.io/examples/autofit.html">app_autofit</a> sample application.</p>
+</li>
+<li>
+<p>Added the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.set_freeze_panes"><code>worksheet.set_freeze_panes()</code></a> method to set &quot;freeze&quot; panes for
+worksheets. See also the <a href="https://rustxlsxwriter.github.io/examples/panes.html">app_panes</a> example application.</p>
+</li>
 </ul>
 <h2 id="090---2022-10-31"><a class="header" href="#090---2022-10-31">[0.9.0] - 2022-10-31</a></h2>
 <p><strong>Note, this version contains a major backward incompatible API change where it
