--- a/worksheet/autofit.html
+++ b/worksheet/autofit.html
@@ -162,6 +162,7 @@ improved in upcoming releases.</p>
 <p><strong>Note</strong>, <code>worksheet.set_autofit()</code> iterates through all the cells in a
 worksheet that have been populated with data and performs a length calculation
 on each one, so it can have a performance overhead for bigger worksheets.</p>
+<p>See also the <a href="../examples/autofit.html">Autofitting Columns</a> example.</p>
 
                     </main>
 
