--- a/examples/merge_range.html
+++ b/examples/merge_range.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Feature demo - Working with the rust_xlsxwriter library</title>
+        <title>Merging cells - Working with the rust_xlsxwriter library</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="../worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="../worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="../worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="../worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html" class="active"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/merge_range.html"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">8.5.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html"><strong aria-hidden="true">8.6.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">8.7.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="../examples/headers.html"><strong aria-hidden="true">8.8.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="../examples/panes.html"><strong aria-hidden="true">8.9.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="../examples/autofit.html"><strong aria-hidden="true">8.10.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="../worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="../worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="../worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="../worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/merge_range.html" class="active"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">8.5.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html"><strong aria-hidden="true">8.6.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">8.7.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="../examples/headers.html"><strong aria-hidden="true">8.8.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="../examples/panes.html"><strong aria-hidden="true">8.9.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="../examples/autofit.html"><strong aria-hidden="true">8.10.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,63 +142,53 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="feature-demo"><a class="header" href="#feature-demo">Feature demo</a></h1>
-<p>A simple getting started example of some of the features of the rust_xlsxwriter
-library. It shows some examples of writing different data types, including
-dates.</p>
-<p><img src="../../images/demo.png" alt="Image of output from app_demo.rs" /></p>
+                        <h1 id="merging-cells"><a class="header" href="#merging-cells">Merging cells</a></h1>
+<p>This is an example of creating merged cells ranges in Excel using
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.merge_range"><code>worksheet.merge_range()</code></a>.</p>
+<p>The <code>merge_range()</code> only handles strings but it can be used merge other data
+types, such as number, as shown below.</p>
+<p><img src="../../images/app_merge_range.png" alt="Image of output from app_hello_world.rs" /></p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
-</span><span class="boring">//! A simple, getting started, example of some of the features of the
+</span><span class="boring">//! An example of creating merged ranges in a worksheet using the
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use chrono::NaiveDate;
-use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxError};
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
     let mut workbook = Workbook::new();
-
-    // Create some formats to use in the worksheet.
-    let bold_format = Format::new().set_bold();
-    let decimal_format = Format::new().set_num_format(&quot;0.000&quot;);
-    let date_format = Format::new().set_num_format(&quot;yyyy-mm-dd&quot;);
-    let merge_format = Format::new()
-        .set_border(XlsxBorder::Thin)
-        .set_align(XlsxAlign::Center);
-
-    // Add a worksheet to the workbook.
     let worksheet = workbook.add_worksheet();
 
-    // Set the column width for clarity.
-    worksheet.set_column_width(0, 15)?;
+    // Write some merged cells with centering.
+    let format = Format::new().set_align(XlsxAlign::Center);
 
-    // Write a string without formatting.
-    worksheet.write_string_only(0, 0, &quot;Hello&quot;)?;
+    worksheet.merge_range(1, 1, 1, 2, &quot;Merged cells&quot;, &amp;format)?;
 
-    // Write a string with the bold format defined above.
-    worksheet.write_string(1, 0, &quot;World&quot;, &amp;bold_format)?;
+    // Write some merged cells with centering and a border.
+    let format = Format::new()
+        .set_align(XlsxAlign::Center)
+        .set_border(XlsxBorder::Thin);
 
-    // Write some numbers.
-    worksheet.write_number_only(2, 0, 1)?;
-    worksheet.write_number_only(3, 0, 2.34)?;
+    worksheet.merge_range(3, 1, 3, 2, &quot;Merged cells&quot;, &amp;format)?;
 
-    // Write a number with formatting.
-    worksheet.write_number(4, 0, 3.00, &amp;decimal_format)?;
+    // Write some merged cells with a number by overwriting the first cell in
+    // the string merge range with the formatted number.
+    worksheet.merge_range(5, 1, 5, 2, &quot;&quot;, &amp;format)?;
+    worksheet.write_number(5, 1, 12345.67, &amp;format)?;
 
-    // Write a formula.
-    worksheet.write_formula_only(5, 0, &quot;=SIN(PI()/4)&quot;)?;
+    // Example with a more complex format and larger range.
+    let format = Format::new()
+        .set_align(XlsxAlign::Center)
+        .set_align(XlsxAlign::VerticalCenter)
+        .set_border(XlsxBorder::Thin)
+        .set_background_color(XlsxColor::Silver);
 
-    // Write a date.
-    let date = NaiveDate::from_ymd(2023, 1, 25);
-    worksheet.write_date(6, 0, date, &amp;date_format)?;
-
-    // Write some merged cells.
-    worksheet.merge_range(7, 0, 7, 1, &quot;Merged cells&quot;, &amp;merge_format)?;
+    worksheet.merge_range(7, 1, 8, 3, &quot;Merged cells&quot;, &amp;format)?;
 
     // Save the file to disk.
-    workbook.save(&quot;demo.xlsx&quot;)?;
+    workbook.save(&quot;merge_range.xlsx&quot;)?;
 
     Ok(())
 }
@@ -208,11 +198,11 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../examples/hello_world.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../examples/formatting.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../examples/formatting.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../examples/colors.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -222,11 +212,11 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../examples/hello_world.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../examples/formatting.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../examples/formatting.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../examples/colors.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
