--- a/changelog.html
+++ b/changelog.html
@@ -144,6 +144,17 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0121---2022-11-09"><a class="header" href="#0121---2022-11-09">[0.12.1] - 2022-11-09</a></h2>
+<h3 id="changed"><a class="header" href="#changed">Changed</a></h3>
+<ul>
+<li>
+<p>Dependency changes to make WASM compilation easier:</p>
+<ul>
+<li>Reduced the <code>zip</code> dependency to the minimum import only.</li>
+<li>Removed dependency on <code>tempfile</code>. The library now uses in memory files</li>
+</ul>
+</li>
+</ul>
 <h2 id="0120---2022-11-06"><a class="header" href="#0120---2022-11-06">[0.12.0] - 2022-11-06</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
@@ -182,7 +193,7 @@ worksheets. See also the <a href="https://rustxlsxwriter.github.io/examples/pane
 <p><strong>Note, this version contains a major backward incompatible API change where it
 restructures the Workbook constructor/destructor sequence and introduces a
 <code>save()</code> method to replace <code>close()</code>.</strong></p>
-<h3 id="changed"><a class="header" href="#changed">Changed</a></h3>
+<h3 id="changed-1"><a class="header" href="#changed-1">Changed</a></h3>
 <ul>
 <li>The <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.new"><code>Workbook::new()</code></a> method no longer takes a filename. Instead the naming
 of the file has move to a <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save"><code>workbook.save()</code></a> method which replaces
