--- a/examples/hyperlinks.html
+++ b/examples/hyperlinks.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Autofitting columns - Working with the rust_xlsxwriter library</title>
+        <title>Hyperlinks - Working with the rust_xlsxwriter library</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_started.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="../worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="../worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="../worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="../worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/merge_range.html"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">8.5.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/hyperlinks.html"><strong aria-hidden="true">8.6.</strong> Hyperlinks</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html"><strong aria-hidden="true">8.7.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">8.8.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="../examples/headers.html"><strong aria-hidden="true">8.9.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="../examples/panes.html"><strong aria-hidden="true">8.10.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="../examples/autofit.html" class="active"><strong aria-hidden="true">8.11.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_started.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../workbook/saving.html"><strong aria-hidden="true">3.1.</strong> Creating and saving an xlsx file</a></li></ol></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../worksheet/create.html"><strong aria-hidden="true">4.1.</strong> Creating worksheets</a></li><li class="chapter-item expanded "><a href="../worksheet/page_setup.html"><strong aria-hidden="true">4.2.</strong> Page Setup</a></li><li class="chapter-item expanded "><a href="../worksheet/headers.html"><strong aria-hidden="true">4.3.</strong> Adding Headers and Footers</a></li><li class="chapter-item expanded "><a href="../worksheet/autofit.html"><strong aria-hidden="true">4.4.</strong> Autofitting column widths</a></li><li class="chapter-item expanded "><a href="../worksheet/tabs.html"><strong aria-hidden="true">4.5.</strong> Working with worksheet tabs</a></li></ol></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.4.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.5.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../colors/intro.html"><strong aria-hidden="true">6.</strong> Working with Colors</a></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">7.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">7.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">7.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">7.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">7.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html"><strong aria-hidden="true">7.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">8.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">8.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html"><strong aria-hidden="true">8.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">8.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/merge_range.html"><strong aria-hidden="true">8.4.</strong> Merging cells</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">8.5.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/hyperlinks.html" class="active"><strong aria-hidden="true">8.6.</strong> Hyperlinks</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html"><strong aria-hidden="true">8.7.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">8.8.</strong> Dynamic array formulas</a></li><li class="chapter-item expanded "><a href="../examples/headers.html"><strong aria-hidden="true">8.9.</strong> Headers and Footers</a></li><li class="chapter-item expanded "><a href="../examples/panes.html"><strong aria-hidden="true">8.10.</strong> Freeze Panes</a></li><li class="chapter-item expanded "><a href="../examples/autofit.html"><strong aria-hidden="true">8.11.</strong> Autofitting columns</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">10.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">11.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">12.</strong> Author</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,55 +142,57 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="autofitting-columns"><a class="header" href="#autofitting-columns">Autofitting columns</a></h1>
-<p>This is an example of using the simulated autofit option to automatically set
-worksheet column widths based on the data in the column.</p>
+                        <h1 id="hyperlinks"><a class="header" href="#hyperlinks">Hyperlinks</a></h1>
+<p>This is an example of a program to create demonstrate creating links in a
+worksheet using the rust_xlsxwriter library.</p>
+<p>The links can be to external urls, to external files or internally to cells in
+the workbook.</p>
 <p><strong>Image of the output file:</strong></p>
-<p><img src="../../images/autofit.png" alt="Image of output from autofit.rs" /></p>
+<p><img src="../../images/app_hyperlinks.png" alt="Image of output from app_hyperlinks.rs" /></p>
 <p><strong>Code to generate the output file:</strong></p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
-</span><span class="boring">//! An example of using a simulated Column Autofit using the rust_xlsxwriter
-</span><span class="boring">//! library.
+</span><span class="boring">//! A simple, getting started, example of some of the features of the
+</span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Workbook, XlsxError};
+</span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError, XlsxUnderline};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
     let mut workbook = Workbook::new();
 
+    // Create a format to use in the worksheet.
+    let link_format = Format::new()
+        .set_font_color(XlsxColor::Red)
+        .set_underline(XlsxUnderline::Single);
+
     // Add a worksheet to the workbook.
-    let worksheet = workbook.add_worksheet();
+    let worksheet1 = workbook.add_worksheet();
 
-    // Write some data to the worksheet.
+    // Set the column width for clarity.
+    worksheet1.set_column_width(0, 26)?;
 
-    // Columns with explicitly defined widths aren't auto-fitted.
-    worksheet.set_column_width(0, 18)?;
-    worksheet.write_string_only(0, 0, &quot;User set widths&quot;)?;
-    worksheet.write_string_only(1, 0, &quot;aren't changed&quot;)?;
+    // Write some url links.
+    worksheet1.write_url(0, 0, &quot;https://www.rust-lang.org&quot;)?;
+    worksheet1.write_url_with_text(1, 0, &quot;https://www.rust-lang.org&quot;, &quot;Learn Rust&quot;)?;
+    worksheet1.write_url_with_format(2, 0, &quot;https://www.rust-lang.org&quot;, &amp;link_format)?;
 
-    // Columns without explicitly defined widths are auto-fitted.
-    worksheet.write_string_only(0, 1, &quot;Implicit widths&quot;)?;
-    worksheet.write_string_only(1, 1, &quot;are changed&quot;)?;
+    // Write some internal links.
+    worksheet1.write_url(4, 0, &quot;internal:Sheet1!A1&quot;)?;
+    worksheet1.write_url(5, 0, &quot;internal:Sheet2!C4&quot;)?;
 
-    // Add some similar words of different lengths.
-    worksheet.write_string_only(0, 2, &quot;Fo&quot;)?;
-    worksheet.write_string_only(1, 2, &quot;Foo&quot;)?;
-    worksheet.write_string_only(2, 2, &quot;Food&quot;)?;
-    worksheet.write_string_only(3, 2, &quot;Frood&quot;)?;
-    worksheet.write_string_only(4, 2, &quot;Froody&quot;)?;
+    // Write some external links.
+    worksheet1.write_url(7, 0, r&quot;file:///C:\Temp\Book1.xlsx&quot;)?;
+    worksheet1.write_url(8, 0, r&quot;file:///C:\Temp\Book1.xlsx#Sheet1!C4&quot;)?;
 
-    // Add some numbers.
-    worksheet.write_number_only(0, 3, 123)?;
-    worksheet.write_number_only(0, 4, 1234)?;
-    worksheet.write_number_only(0, 5, 12345)?;
-
-    // Run autofit after the data have been added to the worksheet.
-    worksheet.set_autofit();
+    // Add another sheet to link to.
+    let worksheet2 = workbook.add_worksheet();
+    worksheet2.write_string_only(3, 2, &quot;Here I am&quot;)?;
+    worksheet2.write_url_with_text(4, 2, &quot;internal:Sheet1!A6&quot;, &quot;Go back&quot;)?;
 
     // Save the file to disk.
-    workbook.save(&quot;autofit.xlsx&quot;)?;
+    workbook.save(&quot;hyperlinks.xlsx&quot;)?;
 
     Ok(())
 }
@@ -200,11 +202,11 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../examples/panes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../examples/colors.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../performance.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../examples/right_to_left.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -214,11 +216,11 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../examples/panes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../examples/colors.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../performance.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../examples/right_to_left.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
