--- a/tutorial/tutorial1.html
+++ b/tutorial/tutorial1.html
@@ -345,7 +345,7 @@ the first cell in a worksheet, <code>A1</code>, is <code>(0, 0)</code>.</p>
 </span><span class="boring">}
 </span></code></pre>
 <p>Finally, we save and close the Excel file via the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save"><code>workbook.save()</code></a> method
-which take a path/filename string as an argument:</p>
+which take a <a href="https://doc.rust-lang.org/std/path/struct.Path.html"><code>std::path</code></a> Path or filename string as an argument:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
@@ -383,8 +383,8 @@ which take a path/filename string as an argument:</p>
 </span><span class="boring">}
 </span></code></pre>
 <p>This will give us the spreadsheet shown in the image above.</p>
-<p>It is also possible to save to a <a href="https://doc.rust-lang.org/std/path/struct.Path.html"><code>std::path</code></a> Path  or a byte vector using the
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_path"><code>workbook.save_to_path()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a> methods.</p>
+<p>It is also possible to save to a byte vector using
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a>.</p>
 <p>We will look at file saving options in the section on TODO.</p>
 
                     </main>
