--- a/print.html
+++ b/print.html
@@ -531,7 +531,7 @@ which take a <a href="https://doc.rust-lang.org/std/path/struct.Path.html"><code
 <p>This will give us the spreadsheet shown in the image above.</p>
 <p>It is also possible to save to a byte vector using
 <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a>.</p>
-<p>We will look at file saving options in the section on TODO.</p>
+<p>We will look at file saving options in the section on <a href="tutorial/../workbook/saving.html">Creating and saving an xlsx file</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="adding-some-formatting"><a class="header" href="#adding-some-formatting">Adding some formatting</a></h1>
 <p>The previous program converted the required data into an Excel file but it
 looked a little bare. In order to make the information clearer we can add some
