--- a/tutorial/tutorial1.html
+++ b/tutorial/tutorial1.html
@@ -385,7 +385,7 @@ which take a <a href="https://doc.rust-lang.org/std/path/struct.Path.html"><code
 <p>This will give us the spreadsheet shown in the image above.</p>
 <p>It is also possible to save to a byte vector using
 <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a>.</p>
-<p>We will look at file saving options in the section on TODO.</p>
+<p>We will look at file saving options in the section on <a href="../workbook/saving.html">Creating and saving an xlsx file</a>.</p>
 
                     </main>
 
